# Diamond_Ray

./: --help.prt  RayProgDABOB.m  diamond_arl.py  diamond_pyram.py  diamond_ray.py  diamond_tl_coherent.py  diamond_tl_incoherent.py  eigenray_waveguide.m  pekeris.py  plot_castaways.py  plot_liveocean.py  plot_tidal.py  pyram_ray_tl.py  pyram_response.py  pyram_response_freq.py  transmit_sig.py
DALLOSTO_RAY/: RayProgDABOB.m  eigenray_waveguide.m  rayfan_waveguide.m
PlaneRay2018_Export/: CompareRef - Copy.m  Compare_codes - Copy.m  FindCaustics.m  HammingWindov - Copy.m  NegPosE - Copy.m  PLR_initial_settings.m  ParticleTimeResponse - Copy.m  PekerisPulse.m  PlaneRay for Marine Acoustics.doc  R_bottom.m  R_coh.m  R_layer_k - Copy.m  Ricker - Copy.m  SUFBOT.mat  SUFBOT_temp.mat  TL_geometrical_depth - Copy.m  TL_plr.mat  TL_smooth.m  TimePlots.m  category.m  classifyrays - Copy.m  compute_SEL - Copy.m  eig_range.mat  eigpara.mat  eigresult.mat  env.mat  frangar - Copy.m  getamp.m  getbeamspec - Copy.m  getsourcesignal.m  initpara - Copy.m  para.mat  phone_positions.mat  planeray - Copy.m  planeray_depth.m  planerayfield - Copy.m  planerayinput.m  plot_TL_Geometrical - Copy.m  plot_TL_plr - Copy.m  plot_bathy - Copy.m  (+23 more)
RAMPE/: CppInputWriterRS.m  RUN_RAM_DABOB.m  WVGDinput_ghost.in  ram.in  readPEsstVECTOR.m
RAMPE/sourcefiles/: CMakeLists.txt  RamMain.cc  RamPE_RS.f  RamRunner.cc  RamRunner.hh  RamTypes.hh  ramlib.f  ramlib.hh  ramlibO.f
array_depths/: depths_20200121.mat  depths_20200124.mat  depths_20200128.mat  depths_20200129.mat
data_files/: MODELinputDABOB.mat  (+5 more)
(+4 files in other folders)
